--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "database.js": "^0.0.1",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "git": "^0.1.5",
@@ -20,5 +22,6 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "description": ""
 }
