--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/edge-config": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "database.js": "^0.0.1",
     "express": "^4.21.1",
@@ -18,9 +20,12 @@
     "http": "^0.0.1-security",
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
+    "speakeasy": "^2.0.0",
     "sqlite3": "^5.1.7"
   },
   "description": ""
